# projectvscodetemplates

./: .gitignore  CONTRIBUTING.md  PRESETS.md  README.md  VALIDATION.md  pyproject.toml  readme.md
.stress-1-minimal-zen/Code/: machineid
.stress-1-mobile-flutter/Code/: machineid
.stress-1-web-dev-frontend/Code/: machineid
.stress-2-minimal-zen/Code/: machineid
.stress-2-mobile-flutter/Code/: machineid
.stress-2-web-dev-frontend/Code/: machineid
.stress-3-web-dev-frontend/Code/: machineid
.tmp-appdata4/Code/: machineid
.tmp-appdata7/Code/: machineid
linux/: install.sh  quiz.sh
presets/: manifest.json
presets/c-cpp-systems/: README.md  keybindings.json  settings.json
presets/competitive-programming/: competitive-programming.code-snippets  extensions.json
presets/data-science/: README.md  data-science.code-snippets  extensions.json  settings.json
presets/devops-cloud/: README.md  extensions.json  settings.json
presets/go-backend/: extensions.json  keybindings.json  settings.json
presets/java-student/: extensions.json  java-student.code-snippets
presets/minimal-zen/: README.md  extensions.json  settings.json
presets/mobile-flutter/: README.md  extensions.json  settings.json
presets/python-beginner/: extensions.json  keybindings.json  settings.json
presets/python-professional/: README.md  extensions.json  python-professional.code-snippets  settings.json
presets/remote-ssh-server/: README.md  extensions.json  keybindings.json  settings.json
presets/rust-systems/: extensions.json  keybindings.json  rust-systems.code-snippets
presets/streamer-content-creator/: extensions.json  keybindings.json
presets/web-dev-frontend/: README.md  extensions.json
presets/web-dev-fullstack/: README.md  settings.json  web-dev-fullstack.code-snippets
scripts/: install.ps1  install.sh  quiz.sh
tests/: test_all.py  test_stress.py
web/: index.html
windows/: ProjectVsCodeTemplates.rc  build-exe.ps1  install.ps1  launch-installer.cmd
(+53 files in other folders)
